# MLOPs-Project

./: demo.py  pyproject.toml  setup.py  test.py
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  s3_estimator.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
static/style/: style.css
templates/: vehicledata.html
